--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "homepage": "https://EITalanova.github.io/tweets_card/",
   "dependencies": {
+    "@testing-library/jest-dom": "^5.16.3",
+
     "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/react": "^12.1.4",
     "axios": "^1.4.0",
