--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "axios": "^1.4.0",
     "classnames": "^2.3.2",
     "dotenv": "^16.3.1",
-    "notiflix": "^3.2.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-loader-spinner": "^5.3.4",
@@ -20,11 +19,9 @@
     "react-router-dom": "^6.13.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.7.3",
-    "react-svg-sprite": "^1.0.8",
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
-    "sass": "^1.63.6",
-    "web-vitals": "^2.1.3"
+    "sass": "^1.63.6"
   },
   "scripts": {
     "start": "react-scripts start",
