--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/react": "^12.1.4",
+    "@types/react": "^18.2.17",
+    "@types/react-dom": "^18.2.7",
     "axios": "^1.4.0",
     "classnames": "^2.3.2",
     "react": "^18.2.0",
@@ -15,7 +17,8 @@
     "react-router-dom": "^6.13.0",
     "react-scripts": "5.0.1",
     "redux-persist": "^6.0.0",
-    "sass": "^1.63.6"
+    "sass": "^1.63.6",
+    "typescript": "^5.1.6"
   },
   "scripts": {
     "start": "react-scripts start",
